$Id: ChangeLog,v 1.22 2004/12/21 00:14:48 mthuurne Exp $

2004-12-20 Maarten ter Huurne <maarten@treewalker.org>
    * Implemented CHGSND: writing the 1-bit sound port.
      Fixes samples in Ikari.
    * Implemented SCREEN8.
    * Cleaned up SCREEN5 and SCREEN7 code.
    * Moved VDPSTA from "sub.asm" to "video.asm".

2004-12-20 Joost Yervante Damad <joost@lumatec.be>
    * documentation additions and added 002B and 002C

2004-12-19 Maarten ter Huurne <maarten@treewalker.org>
    * Implemented VDPSTA: VDP status register reading.
      Fixes games that are polling S#2 to see if command finished.
    * Implemented SETPLT: set palette.
      Fixes wrong colours in some games.

2004-12-19 Manuel Bilderbeek <manuel@msxnet.org>
    * Stubbed the functions that were already in the jump table, but only did
      a ret
    * Now also for subrom

2004-12-18 Joost Yervante Damad <joost@lumatec.be>
    * add debian/ directory, provides debian packaging

2004-12-18 Albert Beevendorp
    * fixed a bug in CHGCLR which resulted in a different bordercolor
      in Famicle Parodic.

2004-12-18 Maarten ter Huurne <maarten@treewalker.org>
    * Added support for Pasmo to make.bat/build.bat:
      "make pasmo" selects Pasmo instead of tniASM.
      Patch provided by BouKiChi.
    * Keep Kana LED in off state.
    * Released C-BIOS 0.18.

2004-12-17 Maarten ter Huurne <maarten@treewalker.org>
    * Refactored subslot selection code from "cal_slt" into reusable
      subroutines.
    * Implemented subslot support for RDSLT and WRSLT.
    * Implemented CLRSPR (clear sprites) and also call it when switching
      screen mode.

2004-12-12 Maarten ter Huurne <maarten@treewalker.org>
    * Added "dist" target to Makefile.

2004-12-11 Maarten ter Huurne <maarten@treewalker.org>
    * Added support for Pasmo in the Makefile. You can select an assembler by
      setting "Z80_ASSEMBLER" to "pasmo" or "sjasm".
    * Added graphical logo to splash screen.